fix: patch CVE-2025-66478 vulnerability by updating Next.js to 16.0.7

--- a/web/package.json
+++ b/web/package.json
@@ -25,7 +25,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.503.0",
     "neondb": "^0.0.2",
-    "next": "^15.3.2",
+    "next": "15.3.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "swiper": "^11.2.6",
